# backend/routes/methods_user.go
@@ -60,16 +60,38 @@ func (h *Handler) UserPostOnPost(w http.ResponseWriter, r *http.Request) {
 // @Description Gets public posts from a user's followed network, sorted with most recent first
 // @Tags User
 // @Produce json
-// @Success 200 {object} TODO "Activity from user's followed network"
+// @Param userID query string true "ID of logged in user"
+// @Param p query string false "page number of posts (sets of 20)"
+// @Success 200 {object} types.UserPostGetResponse "Activity from user's followed network"
 // @Failure 400 {string} string "Error describing failure"
 // @Failure 500 {string} string "Internal server error"
 // @Router /userpost [get]
 func (h *Handler) UserPostOnGet(w http.ResponseWriter, r *http.Request) {
-	userPostIDString := r.URL.Query().Get("userID")
-	if userPostIDString == "" {
+	userIDString := r.URL.Query().Get("userID")
+	if userIDString == "" {
 		utils.WriteError(w, http.StatusBadRequest, errors.New("userID not provided"))
 		return
 	}
+
+	pageNumberString := r.URL.Query().Get("p")
+	pageNumber, err := strconv.ParseInt(pageNumberString, 10, 64)
+	if err != nil {
+		pageNumber = 0
+	}
+
+	userID, err := strconv.ParseInt(userIDString, 10, 64)
+	if err != nil {
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("bad UserPostID provided %v", userIDString))
+		return
+	}
+
+	posts, err := h.Store.GetActivityFeed(userID, pageNumber)
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+		return
+	}
+
+	utils.WriteJSON(w, http.StatusOK, posts)
 }
 
 // @Summary Like or unlike a post
